fix: change scrollbar styles

--- a/lobox/src/organisms/drop-down/index.scss
+++ b/lobox/src/organisms/drop-down/index.scss
@@ -28,5 +28,24 @@
       border-radius: 0.5rem;
       background-color: white;
       z-index: 1;
+
+      &::-webkit-scrollbar {
+        width: 8px;
+      }
+    
+      &::-webkit-scrollbar-track {
+        background: #f0f0f0;
+        border-radius: 10px;
+      }
+    
+      &::-webkit-scrollbar-thumb {
+        background-color: #7b7b7b; 
+        border-radius: 10px;
+        border: 2px solid #f0f0f0;
+      }
+    
+      &::-webkit-scrollbar-thumb:hover {
+        background-color: #7b7b7b;
+      }
     }
   }
